menu button font weight

--- a/src/style/general.css
+++ b/src/style/general.css
@@ -80,6 +80,7 @@ p {
     text-transform: uppercase;
     text-decoration: none;
     border: none;
+    font-weight: 400;
   }
   .button:hover {
     display: inline-block;
