primary and secondary color change in params

--- a/src/style/typography.css
+++ b/src/style/typography.css
@@ -119,10 +119,10 @@
   }
   
   .primary-text-color{
-      color: var(primaryColor);
+      color: var(--background);
   }
   .secondary-text-color{
-    color: var(fontColor);
+    color: var(--font);
     }
 
 
