--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -1,6 +1,7 @@
 .menuSectionV2{
     padding: 68px 128px;
     background-color: white;
+    font-family: var(--font-family) !important;
 }
 .menuCategoryWrapperV2{
     display: block;
@@ -16,7 +17,8 @@
     text-transform: uppercase;
     font-size: 34px;
     cursor: pointer;
-    background-color: #fff;
+    color: var(--font);
+    background-color: var(--background-color);
 }
 .OuterBorder {
     margin-top: -20px;
@@ -40,6 +42,7 @@
     text-transform: uppercase;
     cursor: pointer;
     padding: 0px 20px;
+    color: var(--font);
 }
 .categoryTab::after{
     content: "";
@@ -47,7 +50,7 @@
     bottom: -5px;
     height: 1px;
     width: 30%;
-    background-color: var(--background);
+    background-color: var(--primary);
 }
 .FoodItemOuterWrapper {
     display: grid;
@@ -71,7 +74,7 @@
     bottom: -10px;
     height: 1px;
     width: 60%;
-    background-color: var(--background);
+    background-color: var(--primary);
 }
 .FoodItemPrice{
     margin-block-start: 0.33em;
