background color for full view

--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -1,5 +1,6 @@
 .menuSectionV2{
     padding: 68px 128px;
+    height: 90vh;
     background-color: var(--background-color);
     font-family: var(--font-family) !important;
 }
