--- a/src/style/general.css
+++ b/src/style/general.css
@@ -2,7 +2,9 @@
 p {
     margin: 0;
   } */
-  
+  body{
+    background-color: var(--primary);
+  }
   .flex {
     display: flex;
     align-items: center;
